add plainToClass and Orders and Books cases
